feat: complete block user
